pruebas_ruby
Last login: Mon May 22 08:48:46 on console
CodeaCamp05s-Mac-mini:~ codea_mac_05$ pwd
/Users/codea_mac_05
CodeaCamp05s-Mac-mini:~ codea_mac_05$ irb
irb(main):001:0> a = 10
=> 10
irb(main):002:0> b
NameError: undefined local variable or method `b' for main:Object
	from (irb):2
	from /Users/codea_mac_05/.rbenv/versions/2.2.4/bin/irb:11:in `<main>'
irb(main):003:0> b=8
=> 8
irb(main):004:0> a+b
=> 18
irb(main):005:0> def sum(a,a)
irb(main):006:1> r = a+a
irb(main):007:1> end
SyntaxError: (irb):5: duplicated argument name
def sum(a,a)
           ^
	from /Users/codea_mac_05/.rbenv/versions/2.2.4/bin/irb:11:in `<main>'
irb(main):008:0> def sum(a)
irb(main):009:1> r = a + a
irb(main):010:1> end
=> :sum
irb(main):011:0> r
NameError: undefined local variable or method `r' for main:Object
	from (irb):11
	from /Users/codea_mac_05/.rbenv/versions/2.2.4/bin/irb:11:in `<main>'
irb(main):012:0> sum
ArgumentError: wrong number of arguments (0 for 1)
	from (irb):8:in `sum'
	from (irb):12
	from /Users/codea_mac_05/.rbenv/versions/2.2.4/bin/irb:11:in `<main>'
irb(main):013:0> sum(4)
=> 8
irb(main):014:0> array = [2, 4, 8]
=> [2, 4, 8]
irb(main):015:0> puts array
2
4
8
=> nil
irb(main):016:0> print array
[2, 4, 8]=> nil
irb(main):017:0> p array
[2, 4, 8]
=> [2, 4, 8]
irb(main):018:0> inspect array
ArgumentError: wrong number of arguments (1 for 0)
	from (irb):18:in `to_s'
	from (irb):18
	from /Users/codea_mac_05/.rbenv/versions/2.2.4/bin/irb:11:in `<main>'
irb(main):019:0> inspect array.to_s
ArgumentError: wrong number of arguments (1 for 0)
	from (irb):19:in `to_s'
	from (irb):19
	from /Users/codea_mac_05/.rbenv/versions/2.2.4/bin/irb:11:in `<main>'
irb(main):020:0> inspect array
ArgumentError: wrong number of arguments (1 for 0)
	from (irb):20:in `to_s'
	from (irb):20
	from /Users/codea_mac_05/.rbenv/versions/2.2.4/bin/irb:11:in `<main>'
irb(main):021:0> inspect array.to_s
ArgumentError: wrong number of arguments (1 for 0)
	from (irb):21:in `to_s'
	from (irb):21
	from /Users/codea_mac_05/.rbenv/versions/2.2.4/bin/irb:11:in `<main>'
irb(main):022:0> inspect array
ArgumentError: wrong number of arguments (1 for 0)
	from (irb):22:in `to_s'
	from (irb):22
	from /Users/codea_mac_05/.rbenv/versions/2.2.4/bin/irb:11:in `<main>'
irb(main):023:0> 
irb(main):024:0* 
irb(main):025:0* var = 50
=> 50
irb(main):026:0> var = "hola Mundo"
=> "hola Mundo"
irb(main):027:0> var.upcase!
=> "HOLA MUNDO"
irb(main):028:0> var
=> "HOLA MUNDO"
irb(main):029:0> 
irb(main):030:0* module prueba
irb(main):031:1> def pru(speak)
irb(main):032:2> @speak = speak
irb(main):033:2> self
irb(main):034:2> end
irb(main):035:1> def who(speak
irb(main):036:3> )
irb(main):037:2> @speak = speak
irb(main):038:2> self
irb(main):039:2> end
irb(main):040:1> end
SyntaxError: (irb):30: class/module name must be CONSTANT
	from /Users/codea_mac_05/.rbenv/versions/2.2.4/bin/irb:11:in `<main>'
irb(main):041:0> module Prueba
irb(main):042:1> def pru(speak)
irb(main):043:2> @speak = speak
irb(main):044:2> self
irb(main):045:2> end
irb(main):046:1> def who(speak)
irb(main):047:2> @speak = speak
irb(main):048:2> self
irb(main):049:2> end
irb(main):050:1> end
=> :who
irb(main):051:0> class Speaker
irb(main):052:1> extend Prueba
irb(main):053:1> end
=> Speaker
irb(main):054:0> Speaker.pru("Hello").who("to me¡")
=> Speaker
irb(main):055:0> speaker
NameError: undefined local variable or method `speaker' for main:Object
	from (irb):55
	from /Users/codea_mac_05/.rbenv/versions/2.2.4/bin/irb:11:in `<main>'
irb(main):056:0> Speaker
=> Speaker
irb(main):057:0> exit
CodeaCamp05s-Mac-mini:~ codea_mac_05$ cd desktop
CodeaCamp05s-Mac-mini:desktop codea_mac_05$ cd xochitl
CodeaCamp05s-Mac-mini:xochitl codea_mac_05$ cd Fase1
CodeaCamp05s-Mac-mini:Fase1 codea_mac_05$ pwd
/Users/codea_mac_05/desktop/xochitl/Fase1
CodeaCamp05s-Mac-mini:Fase1 codea_mac_05$ ruby pruebas.rb
ruby: No such file or directory -- pruebas.rb (LoadError)
CodeaCamp05s-Mac-mini:Fase1 codea_mac_05$ pwd
/Users/codea_mac_05/desktop/xochitl/Fase1
CodeaCamp05s-Mac-mini:Fase1 codea_mac_05$ ls
lunes
CodeaCamp05s-Mac-mini:Fase1 codea_mac_05$ cd lunes
CodeaCamp05s-Mac-mini:lunes codea_mac_05$ ruby pruebas.rb
pruebas.rb:17:in `<main>': undefined method `calculando' for Calculo:Module (NoMethodError)
CodeaCamp05s-Mac-mini:lunes codea_mac_05$ ruby pruebas.rb
pruebas.rb:17:in `<main>': undefined method `new' for Calculo:Module (NoMethodError)
CodeaCamp05s-Mac-mini:lunes codea_mac_05$ ruby pruebas.rb
87698.0
CodeaCamp05s-Mac-mini:lunes codea_mac_05$ irb
irb(main):001:0> module Calculo
irb(main):002:1>   def calculando(number)
irb(main):003:2>     @number = number
irb(main):004:2>     self
irb(main):005:2>   end
irb(main):006:1>   def output
irb(main):007:2>     p Math.sqrt(@number)
irb(main):008:2>   end
irb(main):009:1> end
=> :output
irb(main):010:0> 
irb(main):011:0* class Raiz
irb(main):012:1>   extend Calculo
irb(main):013:1> end
=> Raiz
irb(main):014:0> 
irb(main):015:0* 
irb(main):016:0* Raiz.calculando(7690939204).output
87698.0
=> 87698.0
irb(main):017:0> 
